# HierSphere

./: .gitignore  fix_db.py  main.py  package-lock.json  package.json  pyproject.toml
auth/: hashing.py  jwt_handler.py  oauth2.py
database/: connections.py
models/: application.py  job.py  users.py
routes/: application_route.py  auth_route.py  job_route.py  users_route.py
schemas/: application_schema.py  job_schema.py  login_schema.py  users_schema.py
src/: main.jsx
src/api/: axios.js
src/components/: Navbar.jsx  ProtectedRoute.jsx
src/context/: AuthContext.jsx
src/pages/: Dashboard.jsx  Jobs.jsx  Login.jsx  Register.jsx
src/routes/: AppRoutes.jsx
